fix inventory